@@ -14,7 +14,6 @@ package org.openhab.binding.pjlinkdevice.internal;
 
 import static org.openhab.binding.pjlinkdevice.internal.PJLinkDeviceBindingConstants.THING_TYPE_PJLINK;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -38,7 +37,7 @@ import org.osgi.service.component.annotations.Reference;
 @Component(configurationPid = "binding.pjlinkdevice", service = { ThingHandlerFactory.class })
 public class PJLinkDeviceHandlerFactory extends BaseThingHandlerFactory {
     private InputChannelStateDescriptionProvider stateDescriptionProvider;
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_PJLINK);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_PJLINK);
 
     @Activate
     public PJLinkDeviceHandlerFactory(@Reference InputChannelStateDescriptionProvider provider) {
